Fix Advancement handling