@@ -3,13 +3,14 @@ package com.denizenscript.denizen.nms.v1_20.helpers;
 import com.denizenscript.denizen.nms.interfaces.AdvancementHelper;
 import com.denizenscript.denizen.nms.v1_20.Handler;
 import com.denizenscript.denizen.utilities.FormattedTextHelper;
+import com.google.common.collect.ImmutableMap;
 import net.md_5.bungee.api.ChatColor;
 import net.minecraft.advancements.*;
 import net.minecraft.advancements.critereon.ImpossibleTrigger;
 import net.minecraft.network.protocol.game.ClientboundUpdateAdvancementsPacket;
+import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.PlayerAdvancements;
 import net.minecraft.server.ServerAdvancementManager;
-import net.minecraft.server.dedicated.DedicatedServer;
 import net.minecraft.server.level.ServerPlayer;
 import org.bukkit.Bukkit;
 import org.bukkit.craftbukkit.v1_20_R3.CraftServer;
@@ -23,46 +24,41 @@ import java.util.*;
 public class AdvancementHelperImpl extends AdvancementHelper {
 
     private static final String IMPOSSIBLE_KEY = "impossible";
-    private static final Map<String, Criterion<?>> IMPOSSIBLE_CRITERIA = Collections.singletonMap(IMPOSSIBLE_KEY, new Criterion(new ImpossibleTrigger(), new ImpossibleTrigger.TriggerInstance()));
+    private static final Map<String, Criterion<?>> IMPOSSIBLE_CRITERIA = Map.of(IMPOSSIBLE_KEY, new Criterion<>(new ImpossibleTrigger(), new ImpossibleTrigger.TriggerInstance()));
     private static final List<List<String>> IMPOSSIBLE_REQUIREMENTS = List.of(List.of(IMPOSSIBLE_KEY));
 
-    public static ServerAdvancementManager getAdvancementDataWorld() {
+    public static ServerAdvancementManager getNMSAdvancementManager() {
         return ((CraftServer) Bukkit.getServer()).getServer().getAdvancements();
     }
-
-    // TODO: 1.20.2: advancement registration is different now
-    //public static Field FIELD_ADVANCEMENTLIST_LISTENER = ReflectionHelper.getFields(AdvancementList.class).getFirstOfType(AdvancementList.Listener.class);
 
     @Override
     public void register(com.denizenscript.denizen.nms.util.Advancement advancement) {
         if (advancement.temporary || advancement.registered) {
             return;
         }
-        /*
-        AdvancementHolder nms = asNMSCopy(advancement);
-        if (advancement.parent == null) {
-            Set<Advancement> roots = ReflectionHelper.getFieldValue(AdvancementList.class, ReflectionMappingsInfo.AdvancementList_roots, getAdvancementDataWorld().advancements);
-            roots.add(nms);
-            AdvancementList.Listener something = ReflectionHelper.getFieldValue(AdvancementList.class, FIELD_ADVANCEMENTLIST_LISTENER.getName(), getAdvancementDataWorld().advancements);
-            if (something != null) {
-                something.onAddAdvancementRoot(nms);
+        AdvancementHolder nmsAdvancementHolder = asNMSCopy(advancement);
+        ResourceLocation nmsKey = CraftNamespacedKey.toMinecraft(advancement.key);
+        Map<ResourceLocation, AdvancementHolder> nmsAdvancements = getNMSAdvancementManager().advancements;
+        ImmutableMap.Builder<ResourceLocation, AdvancementHolder> mapBuilder = ImmutableMap.builderWithExpectedSize(nmsAdvancements.size() + 1);
+        mapBuilder.putAll(nmsAdvancements);
+        mapBuilder.put(nmsKey, nmsAdvancementHolder);
+        getNMSAdvancementManager().advancements = mapBuilder.build();
+
+        net.minecraft.advancements.AdvancementTree tree = getNMSAdvancementManager().tree();
+        tree.addAll(List.of(nmsAdvancementHolder));
+        // recalculate advancement position
+        AdvancementNode node = tree.get(nmsKey);
+        if (node != null) {
+            AdvancementNode root = node.root();
+            if (root.holder().value().display().isPresent()) {
+                TreeNodePosition.run(root);
             }
         }
-        else {
-            Set<Advancement> branches = ReflectionHelper.getFieldValue(AdvancementList.class, ReflectionMappingsInfo.AdvancementList_tasks, getAdvancementDataWorld().advancements);
-            branches.add(nms);
-            AdvancementList.Listener something = ReflectionHelper.getFieldValue(AdvancementList.class, FIELD_ADVANCEMENTLIST_LISTENER.getName(), getAdvancementDataWorld().advancements);
-            if (something != null) {
-                something.onAddAdvancementTask(nms);
-            }
-        }
-        getAdvancementDataWorld().advancements.put(nms.id(), nms);
         advancement.registered = true;
         if (!advancement.hidden && advancement.parent != null) {
-            ((CraftServer) Bukkit.getServer()).getHandle().broadcastAll(new ClientboundUpdateAdvancementsPacket(false,
-                    Collections.singleton(nms), Collections.emptySet(), Collections.emptyMap()), (net.minecraft.world.entity.player.Player) null);
+            PacketHelperImpl.broadcast(new ClientboundUpdateAdvancementsPacket(false,
+                    List.of(nmsAdvancementHolder), Set.of(), Map.of()));
         }
-        */
     }
 
     @Override
@@ -70,23 +66,18 @@ public class AdvancementHelperImpl extends AdvancementHelper {
         if (advancement.temporary || !advancement.registered) {
             return;
         }
-        /*
-        Map<ResourceLocation, AdvancementHolder> advancements = getAdvancementDataWorld().advancements;
-        ResourceLocation key = asResourceLocation(advancement.key);
-        Advancement nms = advancements.get(key).value();
-        if (advancement.parent == null) {
-            Set<Advancement> roots = ReflectionHelper.getFieldValue(AdvancementList.class, ReflectionMappingsInfo.AdvancementList_roots, getAdvancementDataWorld().advancements);
-            roots.remove(nms);
+        ResourceLocation nmsKey = CraftNamespacedKey.toMinecraft(advancement.key);
+        Map<ResourceLocation, AdvancementHolder> nmsAdvancements = getNMSAdvancementManager().advancements;
+        ImmutableMap.Builder<ResourceLocation, AdvancementHolder> mapBuilder = ImmutableMap.builderWithExpectedSize(nmsAdvancements.size() - 1);
+        for (Map.Entry<ResourceLocation, AdvancementHolder> entry : nmsAdvancements.entrySet()) {
+            if (!entry.getKey().equals(nmsKey)) {
+                mapBuilder.put(entry);
+            }
         }
-        else {
-            Set<Advancement> branches = ReflectionHelper.getFieldValue(AdvancementList.class, ReflectionMappingsInfo.AdvancementList_tasks, getAdvancementDataWorld().advancements);
-            branches.remove(nms);
-        }
-        advancements.remove(key);
+        getNMSAdvancementManager().advancements = mapBuilder.build();
+        getNMSAdvancementManager().tree().remove(Set.of(nmsKey));
         advancement.registered = false;
-        ((CraftServer) Bukkit.getServer()).getHandle().broadcastAll(new ClientboundUpdateAdvancementsPacket(false,
-                Collections.emptySet(), Collections.singleton(key), Collections.emptyMap()), (net.minecraft.world.entity.player.Player) null);
-         */
+        PacketHelperImpl.broadcast(new ClientboundUpdateAdvancementsPacket(false, List.of(), Set.of(nmsKey), Map.of()));
     }
 
     @Override
@@ -98,12 +89,6 @@ public class AdvancementHelperImpl extends AdvancementHelper {
         if (advancement.temporary) {
             AdvancementHolder nmsAdvancement = asNMSCopy(advancement);
             AdvancementProgress progress = new AdvancementProgress();
-            Map<String, Criterion> criteria = new HashMap<>();
-            String[][] requirements = new String[advancement.length][];
-            for (int i = 0; i < advancement.length; i++) {
-                criteria.put(IMPOSSIBLE_KEY + i, new Criterion(new ImpossibleTrigger(), new ImpossibleTrigger.TriggerInstance()));
-                requirements[i] = new String[] { IMPOSSIBLE_KEY + i };
-            }
             progress.update(new AdvancementRequirements(IMPOSSIBLE_REQUIREMENTS));
             for (int i = 0; i < len; i++) {
                 progress.grantProgress(IMPOSSIBLE_KEY + i); // complete impossible criteria
@@ -114,7 +99,7 @@ public class AdvancementHelperImpl extends AdvancementHelper {
                     Collections.singletonMap(nmsAdvancement.id(), progress)));
         }
         else {
-            AdvancementHolder nmsAdvancement = getAdvancementDataWorld().advancements.get(CraftNamespacedKey.toMinecraft(advancement.key));
+            AdvancementHolder nmsAdvancement = getNMSAdvancementManager().advancements.get(CraftNamespacedKey.toMinecraft(advancement.key));
             for (int i = 0; i < len; i++) {
                 ((CraftPlayer) player).getHandle().getAdvancements().award(nmsAdvancement, IMPOSSIBLE_KEY + i);
             }
@@ -138,7 +123,7 @@ public class AdvancementHelperImpl extends AdvancementHelper {
                     Collections.singletonMap(nmsAdvancement.id(), progress)));
         }
         else {
-            AdvancementHolder nmsAdvancement = getAdvancementDataWorld().advancements.get(CraftNamespacedKey.toMinecraft(advancement.key));
+            AdvancementHolder nmsAdvancement = getNMSAdvancementManager().advancements.get(CraftNamespacedKey.toMinecraft(advancement.key));
             ((CraftPlayer) player).getHandle().getAdvancements().award(nmsAdvancement, IMPOSSIBLE_KEY);
         }
     }
@@ -152,7 +137,7 @@ public class AdvancementHelperImpl extends AdvancementHelper {
                     Collections.emptyMap()));
         }
         else {
-            AdvancementHolder nmsAdvancement = getAdvancementDataWorld().advancements.get(CraftNamespacedKey.toMinecraft(advancement.key));
+            AdvancementHolder nmsAdvancement = getNMSAdvancementManager().advancements.get(CraftNamespacedKey.toMinecraft(advancement.key));
             ((CraftPlayer) player).getHandle().getAdvancements().revoke(nmsAdvancement, IMPOSSIBLE_KEY);
         }
     }
@@ -166,13 +151,13 @@ public class AdvancementHelperImpl extends AdvancementHelper {
                 Collections.emptyMap()));
         PlayerAdvancements data = nmsPlayer.getAdvancements();
         data.save(); // save progress
-        data.reload(DedicatedServer.getServer().getAdvancements()); // clear progress
+        data.reload(getNMSAdvancementManager()); // clear progress
         data.flushDirty(nmsPlayer); // load progress and update client
     }
 
     private static AdvancementHolder asNMSCopy(com.denizenscript.denizen.nms.util.Advancement advancement) {
         AdvancementHolder parent = advancement.parent != null
-                ? getAdvancementDataWorld().advancements.get(CraftNamespacedKey.toMinecraft(advancement.parent))
+                ? getNMSAdvancementManager().advancements.get(CraftNamespacedKey.toMinecraft(advancement.parent))
                 : null;
         DisplayInfo display = new DisplayInfo(CraftItemStack.asNMSCopy(advancement.icon),
                 Handler.componentToNMS(FormattedTextHelper.parse(advancement.title, ChatColor.WHITE)), Handler.componentToNMS(FormattedTextHelper.parse(advancement.description, ChatColor.WHITE)),
@@ -185,7 +170,7 @@ public class AdvancementHelperImpl extends AdvancementHelper {
             criteria = new HashMap<>();
             requirements = new ArrayList<>(advancement.length);
             for (int i = 0; i < advancement.length; i++) {
-                criteria.put(IMPOSSIBLE_KEY + i, new Criterion(new ImpossibleTrigger(), new ImpossibleTrigger.TriggerInstance()));
+                criteria.put(IMPOSSIBLE_KEY + i, new Criterion<>(new ImpossibleTrigger(), new ImpossibleTrigger.TriggerInstance()));
                 requirements.set(i, List.of(IMPOSSIBLE_KEY + i));
             }
         }
